Resolving padding and alignment issues on type tester

--- a/assets/scss/components/_type-tester.scss
+++ b/assets/scss/components/_type-tester.scss
@@ -359,8 +359,8 @@
     }
 
     @include min-screen($breakpoint-medium) {
-      padding-left: $padding * 3;
-      padding-right: $padding * 3;
+      padding-left: $padding * 6;
+      padding-right: $padding * 6;
     }
   }
 }
